@@ -1,9 +1,10 @@
+@masking
 Feature: Masking smells using config files
   In order to keep my reports meaningful
   As a developer
   I want to mask some smells using config files
 
-  Scenario: empty config file has no effect
+  Scenario: empty config file is ignored
     When I run reek spec/samples/empty_config_file/dirty.rb
     Then it fails with exit status 2
     And it reports:
@@ -15,6 +16,15 @@ Feature: Masking smells using config files
         Dirty#a has the name 'a' (Uncommunicative Name)
         Dirty#a/block has the variable name 'x' (Uncommunicative Name)
         Dirty#a/block/block is nested (Nested Iterators)
+
+      """
+
+  Scenario: corrupt config file prevents normal output
+    When I run reek spec/samples/corrupt_config_file/dirty.rb
+    Then it fails with exit status 1
+    And it displays the error message:
+      """
+      Error: invalid configuration file "corrupt.reek"
 
       """
 
